tests/ui/parser/raw/raw-byte-string-literals.stderr
error: bare CR not allowed in raw string
  --> $DIR/raw-byte-string-literals.rs:4:9
   |
LL |     br"a";
   |         ^

error: found invalid character; only `#` is allowed in raw string delimitation: ~
  --> $DIR/raw-byte-string-literals.rs:5:5
   |
LL |     br##~"a"~##;
   |     ^^^^^

error: aborting due to 2 previous errors

